feat: adapted to run with java 11 in codespaces